--- a/todo.txt
+++ b/todo.txt
@@ -1,6 +1,7 @@
-- gérer les arrêts suite aux détecteurs (ajout d'un élément)
+- gérer les arrêts suite aux détecteurs (ajout d'un élément + vérification élément bien pris en compte)
 - intégrer un pathfinding efficace en C++ (90%)
-- gérer le coté (changement des angles et autre) ==> IMPORTANT
+- gérer le coté (changement des angles et autre)
+	- bugs cotés haut action reach
 - gérer l'échec de groupe d'action (modes retry, resume et postpone)
 - gérer les arguments contextuels des actions (@...) (OK)
 - passer le XML à protocol buffer
